criação do banco

--- a/templates/boasvindas.html
+++ b/templates/boasvindas.html
@@ -1,2 +1,3 @@
 <h1>Welcome to the jungle!</h1>
+<h3>Usuário autenticado: {{ user }}</h3>
 <p>Parabéns!! Você adentrou no incrivel mundo de Jordano!!!!!😁😁😁😁😁</p>
