--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,7 @@
-{% if erro %}
-    erro! 😒
+{% if erro == 1 %}
+    Esqueceu a senha, neh fela da puta😒!!!
+{% elseif erro == 2 %}
+   Vai entra o caralho😁😁😁!!
 {% endif %}
 
 
