--- a/templates/produtos.html
+++ b/templates/produtos.html
@@ -3,10 +3,9 @@
 {% include "inc/head.html" %}
 
     <h1>Produtos</h1>
-    <p>Listagem de produtos</p>
+    <p>Listagem de usuarios</p>
 
-    <p>Ultima Atualização: {{ "now" | date('d/m/y H:i:s' , 'America/Sao_Paulo')}}</p>
-
+  
     <table border="5">
         <tr>
             <th>Produto</th>
