--- a/templates/inc/head.html
+++ b/templates/inc/head.html
@@ -12,4 +12,6 @@
     <a href="produtos.php">Produtos</a>
     |
     <a href="teste_twig.php">Teste Twig</a>
+    |
+    <a href="usuarios.php">Usuários</a>
  </nav>
