listagem e excluir de usuario

--- a/templates/inc/head.html
+++ b/templates/inc/head.html
@@ -14,4 +14,6 @@
     <a href="teste_twig.php">Teste Twig</a>
     |
     <a href="usuarios.php">Usuários</a>
+    |
+    <a href="logaut.php">Logout</a>
  </nav>
