recuperar senha e o OLHO!!

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,8 @@
     Esqueceu a senha, neh fela da puta😒!!!
 {% elseif erro == 2 %}
    Vai entra o caralho😁😁😁!!
+{% elseif erro == 3 %}
+  Senha alterada com sucesso, parabéns👌!!!
 {% endif %}
 
 
