--- a/templates/recuperar_senha_escolher.html
+++ b/templates/recuperar_senha_escolher.html
@@ -1,10 +1,14 @@
 <form action="" method="post">
-
+    <input type="hidden" name="token" value="{{ token }}">
     <div>
-        Digita a nova senha. e nao erra fdp.
+        Digita a nova senha, e nao erra fdp.
     </div>
     <div>
-       <input type="password" name="senha" id="">
+       <input type="password" name="senha" id="senha">
+       <input type="button" id="olho" value="👁️">
     </div>
     <input type="submit" value="gravar">
 </form>
+
+
+<script src="olho.js"></script>
