--- a/templates/recuperar_senha_escolher.html
+++ b/templates/recuperar_senha_escolher.html
@@ -1,10 +1,19 @@
+{% if msg ?? false %}
+
+    {{ msg }}
+
+{% endif %}
+
+
+
 <form action="" method="post">
     <input type="hidden" name="token" value="{{ token }}">
     <div>
-        Digita a nova senha, e nao erra fdp.
+        Digite sua nova senha:
     </div>
     <div>
        <input type="password" name="senha" id="senha">
+        <input type="password" name="senha_confirma" id="senha_confirma">
        <input type="button" id="olho" value="👁️">
     </div>
     <input type="submit" value="gravar">
