--- a/templates/boasvindas.html
+++ b/templates/boasvindas.html
@@ -1,3 +1,6 @@
-<h1>Welcome to the jungle!</h1>
-<h3>Usuário autenticado: {{ user }}</h3>
-<p>Parabéns!! Você adentrou no incrivel mundo de Jordano!!!!!😁😁😁😁😁</p>
+{% include "inc/head.html" %}
+    <h1>Welcome to the jungle!</h1>
+    <h3>Usuário autenticado: {{ user }}</h3>
+    <p>Parabéns!! Você adentrou no incrivel mundo de Jordano!!!!!😁😁😁😁😁</p>
+
+    
