passando pro meu banco

--- a/templates/boasvindas.html
+++ b/templates/boasvindas.html
@@ -1,6 +1,27 @@
-{% include "inc/head.html" %}
-    <h1>Welcome to the jungle!</h1>
-    <h3>Usuário autenticado: {{ user }}</h3>
-    <p>Parabéns!! Você adentrou no incrivel mundo de Jordano!!!!!😁😁😁😁😁</p>
+<link rel="stylesheet" href="boasvindas.css">
+
+    
+   
+   <h1 class="titulo_cartao">Cartão de acesso <br> {{user}}</h1><br>
+
+        <section>
+            
+            <div id="dia_sem">
+                 <h3>Nome: {{ user }}</h3>
+            </div>
+            
+            <div id="">
+                
+            </div>
+            
+            <div id="">
+                
+            </div>
+            
+            <div id="img">
+                <img id="foto" src=" " alt="nascer do sol">
+            </div>
+            <a href="logaut.php" class="link">Sair</a>
+        </section>
 
     
