--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -29,5 +29,6 @@
             </tr>
         {% endfor %}
     </table>
+    <a style=" text-decoration: none; margin-left: 2%;" href="novo_usuario_gravar.php">Novo Usuário</a>
 </body>
 </html>
